--- a/index.html
+++ b/index.html
@@ -28,9 +28,18 @@
         <section>
             <div class="carousel">
                 <div class="card">
-                    <div class="card-retangulo">
-                       
-                        <div class="retangulo"></div>
+                    <div class="texto-card">
+                        <p>Desenvolvimento Web Full Stack</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="texto-card">
+                        <p>Gestão de Projetos Ágeis</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="texto-card">
+                        <p>Inglês para Viagens</p>
                     </div>
                 </div>
             </div>
