--- a/index.html
+++ b/index.html
@@ -1,50 +1,171 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso Senai</title>
-    <link rel="stylesheet" href="./style.css">
+    <title>Lista de Cursos</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header>
-        <nav class="menu">
-            <div class="caixa=img-logo">
-                <img id="logo" src="./assetes/logo-senai.png" alt="">
-            </div>
 
-            <ul>
-                <li>
-                    <a href="#">Home</a>
-                </li>
-            </ul>
+<header>
+    <div class="header__content">
+        <img src="./assetes/logo-senai.png" alt="Logo SENAI" class="logo">
+        <a href="#" class="btn__home">Home</a>
+    </div>
+</header>
 
-        </nav>
-         <hr>
-    </header>
-    <main>
-        <section>
-            <div class="carousel">
-                <div class="card">
-                    <div class="texto-card">
-                        <p>Desenvolvimento Web Full Stack</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="texto-card">
-                        <p>Gestão de Projetos Ágeis</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="texto-card">
-                        <p>Inglês para Viagens</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
+<div class="container">
+
+ 
+    <div class="curso">
+        <div class="titulo">Desenvolvimento Web Full Stack</div>
+        <div class="categorias">
+            <div>online</div>
+            <div>tecnologia</div>
+            <div>programação</div>
+        </div>
+        <div class="descricao">
+            Aprenda a criar aplicações web modernas utilizando HTML, CSS, JavaScript, Node.js e muito mais.
+        </div>
+        <div class="carga">Carga horária: 80 horas</div>
+
+        <button class="btn">SAIBA MAIS</button>
+        <button class="btn">INSCEREVER-SE</button>
+    </div>
+
+    <div class="curso">
+        <div class="titulo">Gestão de Projetos Ágeis</div>
+        <div class="categorias">
+            <div>presencial</div>
+            <div>negócios</div>
+        </div>
+        <div class="descricao">
+            Curso voltado à aplicação de metodologias ágeis como Scrum e Kanban em ambientes corporativos.
+        </div>
+        <div class="carga">Carga horária: 40 horas</div>
+
+        <button class="btn">SAIBA MAIS</button>
+        <button class="btn">INSCEREVER-SE</button>
+    </div>
+
+    <div class="curso">
+        <div class="titulo">Inglês para Viagens</div>
+        <div class="categorias">
+            <div>EAD</div>
+            <div>idiomas</div>
+        </div>
+        <div class="descricao">
+            Comunique-se com confiança em aeroportos, hotéis e restaurantes durante suas viagens internacionais.
+        </div>
+        <div class="carga">Carga horária: 20 horas</div>
+
+        <button class="btn">SAIBA MAIS</button>
+        <button class="btn">INSCEREVER-SE</button>
+    </div>
+
+    <div class="curso">
+        <div class="titulo">Introdução à Fotografia Digital</div>
+        <div class="categorias">
+            <div>cursos livres</div>
+            <div>presencial</div>
+        </div>
+        <div class="descricao">
+            Explore os fundamentos da fotografia e aprenda a tirar fotos incríveis com sua câmera ou smartphone.
+        </div>
+        <div class="carga">Carga horária: 25 horas</div>
+
+        <button class="btn">SAIBA MAIS</button>
+        <button class="btn">INSCEREVER-SE</button>
+    </div>
+
+  
+    <div class="curso">
+        <div class="titulo">Design Gráfico com Canva</div>
+        <div class="categorias">
+            <div>online</div>
+            <div>design</div>
+            <div>criatividade</div>
+        </div>
+        <div class="descricao">
+            Crie materiais visuais impactantes para redes sociais, empresas ou uso pessoal usando o Canva.
+        </div>
+        <div class="carga">Carga horária: 15 horas</div>
+
+        <button class="btn">SAIBA MAIS</button>
+        <button class="btn">INSCEREVER-SE</button>
+    </div>
+
+  
+    <div class="curso">
+        <div class="titulo">Marketing Digital para Pequenos Negócios</div>
+        <div class="categorias">
+            <div>presencial</div>
+            <div>administração</div>
+            <div>empreendedorismo</div>
+        </div>
+        <div class="descricao">
+            Domine estratégias de marketing online para atrair clientes e aumentar suas vendas.
+        </div>
+        <div class="carga">Carga horária: 30 horas</div>
+
+        <button class="btn">SAIBA MAIS</button>
+        <button class="btn">INSCEREVER-SE</button>
+    </div>
+
+    <div class="curso">
+        <div class="titulo">Lógica de Programação</div>
+        <div class="categorias">
+            <div>tecnologia</div>
+            <div>EAD</div>
+        </div>
+        <div class="descricao">
+            Ideal para iniciantes, este curso ensina os princípios fundamentais da programação de forma descomplicada.
+        </div>
+        <div class="carga">Carga horária: 35 horas</div>
+
+        <button class="btn">SAIBA MAIS</button>
+        <button class="btn">INSCEREVER-SE</button>
+    </div>
+
+   
+    <div class="curso">
+        <div class="titulo">Primeiros Socorros</div>
+        <div class="categorias">
+            <div>cursos livres</div>
+            <div>presencial</div>
+            <div>saúde</div>
+        </div>
+        <div class="descricao">
+            Aprenda como agir em situações de emergência e prestar os primeiros atendimentos corretamente.
+        </div>
+        <div class="carga">Carga horária: 10 horas</div>
+
+        <button class="btn">SAIBA MAIS</button>
+        <button class="btn">INSCEREVER-SE</button>
+    </div>
+
+    <div class="curso">
+        <div class="titulo">Educação Financeira Pessoal</div>
+        <div class="categorias">
+            <div>online</div>
+            <div>financeiro</div>
+        </div>
+        <div class="descricao">
+            Organize suas finanças, controle gastos e aprenda a investir com inteligência.
+        </div>
+        <div class="carga">Carga horária: 18 horas</div>
+
+        <button class="btn">SAIBA MAIS</button>
+        <button class="btn">INSCEREVER-SE</button>
+    </div>
+
+</div>
+
+<footer>
+    © 2025 - Todos os direitos reservados.
+</footer>
+
 </body>
-
 </html>
